// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HistoryChart > renders correctly and matches snapshot 1`] = `
<div>
  <div
    class="border-2 border-dashed border-gray-900 bg-slate-800 p-6 sm:p-12"
  >
    <h2
      class="mb-12 text-center text-xl font-medium"
    >
      charts.sentimentOverTime.title
      <sup
        class="tooltip ml-1"
        data-tip="charts.sentimentOverTime.description"
      >
        <svg
          fill="currentColor"
          font-size="14"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
          />
        </svg>
      </sup>
    </h2>
    <div>
      <div
        class="recharts-wrapper"
        style="position: relative; cursor: default; width: 300px; height: 200px;"
      >
        <svg
          class="recharts-surface"
          height="200"
          style="width: 100%; height: 100%;"
          viewBox="0 0 300 200"
          width="300"
        >
          <title />
          <desc />
          <defs>
            <clippath
              id="recharts1-clip"
            >
              <rect
                height="160"
                width="290"
                x="5"
                y="5"
              />
            </clippath>
          </defs>
          <g
            class="recharts-layer recharts-line"
          >
            <path
              class="recharts-curve recharts-line-curve"
              d="M5,5L295,165"
              fill="none"
              height="160"
              stroke="#8884d8"
              stroke-dasharray="0px 0px"
              stroke-width="2"
              width="290"
            />
          </g>
          <g
            class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
          >
            <line
              class="recharts-cartesian-axis-line"
              fill="none"
              height="30"
              orientation="bottom"
              stroke="#666"
              width="290"
              x="5"
              x1="5"
              x2="295"
              y="165"
              y1="165"
              y2="165"
            />
            <g
              class="recharts-cartesian-axis-ticks"
            >
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  width="290"
                  x="5"
                  x1="5"
                  x2="5"
                  y="165"
                  y1="171"
                  y2="165"
                />
                <text
                  class="recharts-text recharts-cartesian-axis-tick-value"
                  fill="#666"
                  height="30"
                  orientation="bottom"
                  stroke="none"
                  text-anchor="middle"
                  width="290"
                  x="5"
                  y="173"
                >
                  <tspan
                    dy="0.71em"
                    x="5"
                  >
                    1 Jan 2023, 01:00
                  </tspan>
                </text>
              </g>
              <g
                class="recharts-layer recharts-cartesian-axis-tick"
              >
                <line
                  class="recharts-cartesian-axis-tick-line"
                  fill="none"
                  height="30"
                  orientation="bottom"
                  stroke="#666"
                  width="290"
                  x="5"
                  x1="295"
                  x2="295"
                  y="165"
                  y1="171"
                  y2="165"
                />
                <text
                  class="recharts-text recharts-cartesian-axis-tick-value"
                  fill="#666"
                  height="30"
                  orientation="bottom"
                  stroke="none"
                  text-anchor="middle"
                  width="290"
                  x="295"
                  y="173"
                >
                  <tspan
                    dy="0.71em"
                    x="295"
                  >
                    2 Jan 2023, 01:00
                  </tspan>
                </text>
              </g>
            </g>
          </g>
        </svg>
        <div
          class="recharts-tooltip-wrapper"
          style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`HistoryChart > renders correctly with empty data 1`] = `
<div>
  <div
    class="border-2 border-dashed border-gray-900 bg-slate-800 p-6 sm:p-12"
  >
    <h2
      class="mb-12 text-center text-xl font-medium"
    >
      charts.sentimentOverTime.title
      <sup
        class="tooltip ml-1"
        data-tip="charts.sentimentOverTime.description"
      >
        <svg
          fill="currentColor"
          font-size="14"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
          />
        </svg>
      </sup>
    </h2>
    <div>
      <div
        class="recharts-wrapper"
        style="position: relative; cursor: default; width: 300px; height: 200px;"
      >
        <svg
          class="recharts-surface"
          height="200"
          style="width: 100%; height: 100%;"
          viewBox="0 0 300 200"
          width="300"
        >
          <title />
          <desc />
          <defs>
            <clippath
              id="recharts10-clip"
            >
              <rect
                height="160"
                width="290"
                x="5"
                y="5"
              />
            </clippath>
          </defs>
        </svg>
        <div
          class="recharts-tooltip-wrapper"
          style="visibility: hidden; pointer-events: none; position: absolute; top: 0px; left: 0px;"
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;
